<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:android="http://schemas.android.com/apk/res/android">

    <string name="app_name">HTK声纹锁</string>
    <string name="first_login_tips">首次启动，请先设置密码</string>
    <string name="new_password">新密码</string>
    <string name="confirm_password">密码确认</string>
    <string name="submit">确定</string>
    <string name="reset">清除</string>
    <string name="login_tips">请输入密码</string>
    <string name="password">密码</string>
    <string name="passwords_diff">两次密码不同</string>
    <string name="password_error">密码错误</string>
    <string name="password_blank">密码为空</string>
    <string name="lock_service">锁屏后台启动</string>
    <string name="change_password">修改密码</string>
    <string name="test">测试</string>
    <string name="train">训练</string>
    <string name="config">设置</string>
    <string name="lock">立即锁屏</string>
    <string name="exit">完全退出</string>
    <string name="old_password">旧密码</string>
    <string name="password_change_success">密码修改成功</string>
    <string name="register_success">注册成功</string>
    <string name="default_time">00:00</string>
    <string name="default_date">2014/12/31</string>
    <string name="switch_numerical_password">切换到数字密码</string>
    <string name="switch_sound_password">切换到语音识别</string>
    <string name="service_start">锁屏服务启动</string>
    <string name="service_stop">锁屏服务关闭</string>
    <string name="train_tips_title">训练提示</string>
    <string name="train_tips1">要使用语音识别解锁，首先请进行训练。\n训练过程中将录音，并保存处理。</string>
    <string name="train_tips2">训练后可以再次训练，\n每次训练都将清除原先的训练数据。</string>
    <string name="train_tips3">训练时将进行三次录音。\n录音时请按住按钮不放。</string>
    <string name="train_tips4">录音时请清晰地回答系统内置提示或自定义提示。</string>
    <string name="test_too_short">测试时间过短</string>
    <string name="record_1">第一次录音</string>
    <string name="record_2">第二次录音</string>
    <string name="record_3">第三次录音</string>
    <string name="train_not_exist">训练模型不存在</string>
    <string name="record_start">正在录音......</string>
    <string name="record_end">录音结束</string>
    <string name="train_end">训练结束</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="backspace">&lt;</string>
    <string name="audio_error_no_sdcard">录音失败，无SD卡</string>
    <string name="audio_error_state_record">录音失败，后台录音线程未销毁</string>
    <string name="audio_error_unknown">录音失败，未知错误</string>
    <string name="user_manage_train">用户管理及训练</string>
    <string name="threshold_config">阈值设置</string>
    <string name="threshold_tips">阈值越低，系统精度要求越高，越难通过验证</string>
    <string name="add_user">添加用户</string>
    <string name="user_name">用户名</string>
    <string name="delete">删除</string>
    <string name="delete_success">删除成功</string>
    <string name="istrained">已训练</string>
    <string name="untrained">未训练</string>
    <string name="username_blank">用户名为空</string>
    <string name="add_user_failure">用户添加失败</string>
    <string name="train_time">训练时间</string>
    <string name="last_verify_time">最后认证时间</string>
    <string name="trained_user_not_enough">请训练至少3个以上用户</string>
    <string name="unlock_tips">录音提示:</string>
    <string name="none">无</string>
    <string name="test_ui">测试界面</string>
    <string name="question_diy">自定义提示</string>
    <string name="question_system">系统内置提示</string>
    <string name="question_diy_must">请输入提示</string>

    <string-array name="weekDays">
        <item>星期日</item>
        <item>星期一</item>
        <item>星期二</item>
        <item>星期三</item>
        <item>星期四</item>
        <item>星期五</item>
        <item>星期六</item>
        <item>星期日</item>
    </string-array>
    <string-array name="questions">
        <item>最喜欢的歌手</item>
        <item>最喜欢的电影</item>
        <item>最喜欢的小说</item>
        <item>最喜欢的歌曲</item>
        <item>父亲姓名</item>
        <item>母亲姓名</item>
        <item>爱人姓名</item>
        <item>出生地</item>
        <item>曾就读的小学</item>
        <item>曾就读的初中</item>
        <item>曾就读的高中</item>
    </string-array>

    <string name="error">内部错误</string>
    <string name="unlock_success">解锁成功</string>
    <string name="unlock_failure">解锁失败</string>

</resources>