<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
<EditText
        android:id="@+id/editText_OldPassword"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:ems="10"
        android:hint="@string/old_password"
        android:inputType="numberPassword" />
    <EditText
        android:id="@+id/editText_NewPassword"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:ems="10"
        android:hint="@string/new_password"
        android:inputType="numberPassword" />

    <EditText
        android:id="@+id/editText_ConfirmPassword"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:inputType="numberPassword" >

    </EditText>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal" >

            <Button
                style="?android:attr/buttonStyle"
                
                android:id="@+id/button_Register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                
                android:text="@string/submit" />

            <Button
                style="?android:attr/buttonStyle"
                android:id="@+id/button_Reset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reset" />

        </LinearLayout>

    </LinearLayout>
