<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <RelativeLayout
        android:id="@+id/switch_layout"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_margin="@dimen/button_top_bottom_margin"
        android:gravity="center_vertical|left" >

        <Switch
            android:id="@+id/switch_Service"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/lock_service" />
    </RelativeLayout>

    <Button
        android:id="@+id/button_UserManage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/button_top_bottom_margin"
        android:background="@drawable/my_btn"
        android:gravity="center_vertical|left"
        android:paddingLeft="@dimen/button_text_left_pad"
        android:text="@string/user_manage_train" />

    <Button
        android:id="@+id/button_Test"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/button_top_bottom_margin"
        android:background="@drawable/my_btn"
        android:gravity="center_vertical|left"
        android:paddingLeft="@dimen/button_text_left_pad"
        android:text="@string/test" />

    <Button
        android:id="@+id/button_Config"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/button_top_bottom_margin"
        android:background="@drawable/my_btn"
        android:gravity="center_vertical|left"
        android:paddingLeft="@dimen/button_text_left_pad"
        android:text="@string/config" />

    <Button
        android:id="@+id/button_ChangePassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/button_top_bottom_margin"
        android:background="@drawable/my_btn"
        android:gravity="center_vertical|left"
        android:paddingLeft="@dimen/button_text_left_pad"
        android:text="@string/change_password" />


    <Button
        android:id="@+id/button_Exit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/button_top_bottom_margin"
        android:background="@drawable/my_btn"
        android:gravity="center_vertical|left"
        android:paddingLeft="@dimen/button_text_left_pad"
        android:text="@string/exit" />
    <Button
        android:id="@+id/button_Dev"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/button_top_bottom_margin"
        android:background="@drawable/my_btn"
        android:gravity="center_vertical|left"
        android:paddingLeft="@dimen/button_text_left_pad"
        android:text="@string/app_name" />
</LinearLayout>