<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView_TrainTipsTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/train_tips_title"
            android:textSize="45sp" />

        <TextView
            android:id="@+id/textView_TrainTips1"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:text="@string/train_tips1"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/textView_TrainTips2"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:text="@string/train_tips2"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/textView_TrainTips3"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:text="@string/train_tips3"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/textView_TrainTips4"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:text="@string/record_time"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/textView_TrainTips5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:text="@string/train_tips5"
            android:textSize="30sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView_TrainInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_Train"
        android:layout_centerHorizontal="true"
        android:text=""
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/button_Train"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="24dp"
        android:background="@drawable/my_btn"
        android:text="@string/train"
        android:textSize="45sp" />

</RelativeLayout>